tests/baselines/reference/ClassDeclarationWithInvalidConstOnPropertyDeclaration.errors.txt
tests/cases/compiler/ClassDeclarationWithInvalidConstOnPropertyDeclaration.ts(2,3): error TS1042: 'const' modifier cannot be used here.


==== tests/cases/compiler/ClassDeclarationWithInvalidConstOnPropertyDeclaration.ts (1 errors) ====
    class AtomicNumbers {
      static const H = 1;
      ~~~~~~~~~~~~~~~~~~~
!!! error TS1042: 'const' modifier cannot be used here.
    }